--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "ngx-toastr": "^9.1.1",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
+    "wijmo": "^5.20183.568",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
